[package]
name = "imperium"
version = "0.2"
authors = ["Micah Hinckley <hinckleytmicah@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A cli for the Imperium framework for roblox"
readme = "README.md"
homepage = "https://github.com/MicahHinckley/imperium"
repository = "https://github.com/MicahHinckley/imperium"
keywords = ["cli"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.10"